# advancedLayout

./: README.md  build_exe.py  pyproject.toml
docs/: animatic-builder-v1.md
src/animatic_builder/: app.py  model.py
tests/: test_model.py
